--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,9 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:percent:24.2.1'
+    compile 'com.udojava:EvalEx:1.0'
     compile 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 
-    testCompile 'junit:junit:4.12'
+    testCompile 'junit:junit:4.4'
 }
